# elastio-test-task

./: Cargo.toml  config.toml  readme.md
.github/workflows/: rust.yml
src/: main.rs  provider.rs
