[package]
name = "elastio-test-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.79"
